codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__app_server_collab_wait_single_agent_uses_spawn_name.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
• Waiting for Galileo [default]


• Finished waiting
  └ Galileo [default]: Completed - Done
